<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".fragments.ForgotPassword">


    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_password_2"
        android:contentDescription="@string/forgot_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/forgot"
        android:textAllCaps="true"
        android:textColor="@color/purple_theme_color"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textColor="@color/purple_theme_color"
        android:fontFamily="@font/montserrat_semi_bold"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:text="@string/please_provide_your_registered_email_address_to_reset_your_password"
        android:textSize="15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp"
        app:boxStrokeColor="#E91E63">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgot_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="12dp"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textColorHint="#090808"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/forgot_send_link_btn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/send_reset_link"/>


</LinearLayout>