<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper1"
    tools:context=".activities.WelcomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="18dp"
            android:gravity="center"
            android:shadowColor="@color/black"
            android:text="@string/fastchat"
            android:textColor="#EA1059"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/welcomeImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/register_welcome_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/form_bg"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/login_welcome_btn"
            app:layout_constraintEnd_toEndOf="@+id/login_welcome_btn"
            app:layout_constraintStart_toStartOf="@+id/login_welcome_btn"
            app:layout_constraintTop_toBottomOf="@+id/titleMsg" />

        <Button
            android:id="@+id/login_welcome_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="174dp"
            android:background="@drawable/form_bg"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_welcome_btn" />

        <ImageView
            android:id="@+id/welcomeImage"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="13dp"
            app:layout_constraintBottom_toTopOf="@+id/titleMsg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appTitle"
            app:srcCompat="@drawable/welcomelogo" />

        <TextView
            android:id="@+id/titleMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="58dp"
            android:text="@string/a_secure_chatting_app"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/register_welcome_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>