<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrouddark"
    tools:context=".activities.RegisterActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F48FB1">

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="80dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/splashAnimation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="13dp"
                app:srcCompat="@drawable/welcomelogo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:text="@string/create_a_new_account"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:boxCornerRadiusBottomEnd="50dp"
                app:boxCornerRadiusBottomStart="50dp"
                app:boxCornerRadiusTopEnd="50dp"
                app:boxCornerRadiusTopStart="50dp"
                app:boxStrokeColor="#E91E63">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="12dp"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textColorHint="#090808">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:boxCornerRadiusBottomEnd="50dp"
                app:boxCornerRadiusBottomStart="50dp"
                app:boxCornerRadiusTopEnd="50dp"
                app:boxCornerRadiusTopStart="50dp"
                app:boxStrokeColor="#E91E63">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="12dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textColorHint="#090808">


                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="30dp"
                app:boxCornerRadiusBottomEnd="50dp"
                app:boxCornerRadiusBottomStart="50dp"
                app:boxCornerRadiusTopEnd="50dp"
                app:boxCornerRadiusTopStart="50dp"
                app:boxStrokeColor="#E91E63">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="#090808">


                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/form_bg"
                android:text="@string/create_new_account"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/justTExt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/btnGoToLoginHere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_here"
                    android:textColor="#2BEFC1"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/splashAnimation"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="269dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="data_register.json"
            app:lottie_loop="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>